26.jan (tb)
      - updated French translation by Jean-Louis Waltener
      - updated Dutch translation by Jaap Plaisier
25.jan (olavgun)
      - exportly: added brackest and braces for simple scores.
24.jan (ws)
      - show start reapeat also in last measure of score
      - another try in fixing translation of shortcut names
      - added patch from Toby Smithe
      - fix slur handling in parts extraction
      - fix note entry of chords in tuplet with mouse
      - do not allow to make a measure/staff invisible if there is only
        one staff
      - fix crash when deleting whole score in note entry mode
      (db)
      - updated handbooks (incorporates about 50 link fixes)
      - Chapter structure for French handbook
22.jan (lv)
      - fixed Unicode filename handlng for compressed MusicXML files
       (ws)
      - added rtf2html to support capella rtf text import
      - "reset to standard position" now sets the score dirty flag
      - fix default position of dynamics in multi stave systems
      (tb)
      - updated Dutch translation by Jaap Plaisier
	(olavgun)
      - exportly: fixed some problems with beams in gracenotes, and some problems caused by the previous exportly update.
      (db)
      - added Dutch and Galacian handbooks to installer
      - updated all handbooks
21.jan (ws)
      - new text properties dialog, used in text line properties
20.jan (ws)
      - make more strings translatable; fix translation of shortcut names;
        clef names are now translatable
      - make language selection in preference dialog translatable
      - updated tempo text dialog
      (tb)
      - updated Dutch translation by Jaap Plaisier
19.jan (lv)
      - fixed MusicXML import of editorial accidentals
       (ws)
      - save dialog: if *.msc extension is selected and a name without
        extension entered, save as *.msc instead using the default *.mscz
      - cleanup of symbol palette
      - make global pitch spelling function undoable