@@ -71,7 +71,7 @@ int pitch2tpc(int pitch, int key)
 
       static int ptab[15][12] = {
 //              c  c#   d  d#   e   f  f#   g  g#   a  a#   b
-            {  14, 21, 16, 23, 18, 13, 20, 15, 22, 17, 24, 19 },     // Bes
+            {  14, 21, 16, 23, 18, 13, 20, 15, 22, 17, 24, 19 },     // Ces
             {  14, 21, 16, 23, 18, 13, 20, 15, 22, 17, 24, 19 },     // Ges
             {  14, 21, 16, 23, 18, 13, 20, 15, 22, 17, 24, 19 },     // Des
             {  14, 21, 16, 23, 18, 13, 20, 15, 22, 17, 24, 19 },     // As
